clang/test/BSC/Negative/SafeZone/unsafe_stmt_or_decl/unsafe_stmt_or_decl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct StructWithPointer {
  int *ptr;
  int value;
};

struct StructWithoutPointer {
  int value;
  char name[20];
};

union UnionWithPointer {
  int *ptr;
  int value;
};

union UnionWithoutPointer {
  int value;
  float f;
};

_Safe int main(void) {
  int a;  // ok: basic types can be uninitialized
  _Bool b;  // ok: bool type can be uninitialized
  struct StructWithoutPointer s;  // ok: struct without pointer fields can be uninitialized
  union UnionWithoutPointer u;  // ok: union without pointer fields can be uninitialized
  int *p;  // ok: pointers can be left uninitialized, BSCIR init analysis handles use-before-init
  int (*fp)(int);  // ok: function pointers can be left uninitialized
  struct StructWithPointer sp;  // ok: structs with pointers can be left uninitialized
  union UnionWithPointer up;  // ok: unions with pointers can be left uninitialized
  a = 0;
  lab:
  if (a < 10) {
    a = a + 1;
    goto lab;
  }
  switch (a) {
    int b = 1; // expected-error {{variable declaration in the top-level switch block is forbidden in the safe zone}}
    case 0: {
      int c = 1;  // ok
      break;
    }
    {
      case 1:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
        break; 
    }
    {   
      {
        case 2:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
        case 3:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
          break;
      }
    }
    case 4:             // ok
      break;
    case 5: {
      int d = 1;
      switch (d) {
        case 1:     // ok
          break;
        {
          case 2: // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
          break;
        }
        default:    // ok
          break;
      }
      break;
    }
    {
      default:       // expected-error {{default statement not in top-level switch block is forbidden in the safe zone}}
        break;
    }
  }
  long ret = 0;
  long src = 1;
  asm("move %0, %1\n\t" :"=r"(ret) :"r"(src));   // expected-error {{asm statement is forbidden in the safe zone}}
  return 0;
}